// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Email"
  className="share-button--email"
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Email"
  boxShadow={true}
  className="share-button--email"
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Email"
  className="share-button--email"
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton renders a round button 1`] = `
<ButtonRound
  aria-label="Email"
  className="share-button--email"
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
